2007-12-11  Philippe Elie  <phil.el@wanadoo.fr>

	* libutil++/op_bfd.h: remove sym_offset(), we can get what did
	  sym_offset() in a simpler way at call site
	* libutil++/op_bfd.cpp:
	* libpp/callgraph_container.cpp:
	* libpp/profile_container.cpp:
	* libpp/profile_container.h:

2007-11-25  Philippe Elie  <phil.el@wanadoo.fr>

	* daemon/opd_stats.c: dump invalid pc count, added to oprofile stats
	  fs 2.6.24-rc

2007-11-15  Dave Nomura  <dcnltc@us.ibm.com>

	* fixed a some typos in manually patched event files

2007-11-15  Dave Nomura  <dcnltc@us.ibm.com>

	* libpp/format_output.cpp: output XML SYMBOL_DATA for callers/callees
	* libpp/format.h:

2007-11-15   Dave Nomura  <dcnltc@us.ibm.com>

	* events/ppc64/power6/event_mappings: updated Power6 event files
	* events/ppc64/power6/events:

2007-11-15  Philippe Elie  <phil.el@wanadoo.fr>

	handle --root which act as a replacement (a prefix) for the / fs
	* libpp/locate_images.cpp: root path search taking care if a
	  root path is given we never search through "/"
	* libpp/locate_images.h:
	* libpp/populate.cpp:
	* libpp/populate_for_spu.cpp: use the right path to check last
	  modification time, this is yet again a change in behavior, module
	  was never found a this point, even if we found them later, and we
	  didn't try to check_mtime(), so opreport is again a bit more verbose
	* libutil++/op_bfd.cpp: be more cautious when checking if we can try to
	  open the bfd file, don't open it in the '/' fs if a --root is  given
	* libpp/profile_spec.cpp: convey the root_path all over the code.
	* libpp/profile_spec.h:
	* pp/common_option.cpp:
	* pp/common_option.h:
	* pp/opannotate_options.cpp:
	* pp/oparchive.cpp:
	* pp/oparchive_options.cpp:
	* pp/opgprof_options.cpp:
	* pp/opreport_options.cpp:
	* doc/opannotate.1.in: document --root
	* doc/oparchive.1.in:
	* doc/opgprof.1.in:
	* doc/opreport.1.in:
	* doc/oprofile.xml:

2007-11-10  Dave Nomura  <dcnltc@us.ibm.com>
